--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1 id="logo">A Burial At Sea</h1>
+
         <section id="song_epigraph">
        <p >Joe<br>Where did you go<br>I'm going to wash my sins away<br>an angel told me so<br>when they find me in the river<br>tell my mother I was a good boy<br> - <a href="https://www.youtube.com/watch?v=ODo1wcyPlus">Joe"</a> by Mirel Wagner
        </p>
@@ -28,12 +30,16 @@
     <section id="detective_ego">
         <h1>After The Interrogation</h1>
         <p>Tonight, there is a rain storm, drowning out any complete thoughts in Narvaez's mind. He sits with the folds of his forehead forming rungs to the ladder of his ever rising trepidation. The suspect claims nothing. Lie detector picked up silence, a line of calm. It wasn't enough to prove anything, but yet there are traces of him on the ceramic tiles, within the finger nails, the cupid's bow of the lips.</p>
-        <p>"Never thought I'd look at a cadaver. And call it beautiful."</p>
-        <p>The body is sky blue. The eyes like white pearls. Lips parted to whisper untold stories from oblivion.</p>
-        <p>In the middle of the torso. Four</p>
+
+        <p>"Never thought I'd look at a cadaver. And call it beautiful," a pathologist that Narvaez doesn't know and doesn't care to.<br>The body is sky blue. The eyes like white pearls. Lips parted to whisper untold stories from oblivion. In the middle of the torso, four nails long nails carved rivulets that never united until they pooled their contents on to the tiled floors of a public bathroom.</p>
+
+        <p>"Ain't never seen anything beautiful lying dead on a table." Narvaez thinks to himself. Finally getting a word in amongst the great wailing from the sky. It's a shit friday night and the man's ego is bruised.</p>
     </section>
     <section>
-        <p></p>
+        <h1>In the Kitchen</h1>
+        <p>I am sitting on my ass in the middle of the kitchen. With a bucket of water on my side. My hair burns with the desire and the assurance of growing healthy but in that bucket lurks the stench of my disturbance. The wipedown is too much to bear now.</p>
+
+
     </section>
        
         
