--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </section>
     <section id="detective_ego">
         <h1>After The Interrogation</h1>
-        <p>Tonight, there is a rain storm, drowning out any complete thoughts in Narvaez's mind. He sits with the folds of his forehead forming rungs to the ladder of his ever rising trepidation. The suspect claims nothing. Lie detector picked up silence, a line of calm. It wasn't enough to prove anything, but yet there are traces of him on the ceramic tiles, within the finger nails, the cupid's bow of the lips.</p>
+        <p>Tonight, there is a rain storm, drowning out any complete thoughts in Narvaez's mind. He sits with the folds of his forehead forming rungs to the ladder of his ever rising trepidation. The suspect claims nothing. Lie detector picked up silence, a line of calm. It wasn't enough to prove anything, but yet there are traces of him on the ceramic tiles, within the finger nails, his cupid's bow of the lips.</p>
 
-        <p>"Never thought I'd look at a cadaver. And call it beautiful," a pathologist that Narvaez doesn't know and doesn't care to.<br>The body is sky blue. The eyes like white pearls. Lips parted to whisper untold stories from oblivion. In the middle of the torso, four nails long nails carved rivulets that never united until they pooled their contents on to the tiled floors of a public bathroom.</p>
+        <p>"Never thought I'd look at a cadaver. And call it beautiful," says a pathologist that Narvaez doesn't know and doesn't care to.<br>The body is sky blue. The eyes like white pearls. Lips parted to whisper untold stories from oblivion. In the middle of the torso, four long nails carved rivulets that never united until they pooled their contents on to the tiled floors of a public bathroom.</p>
 
         <p>"Ain't never seen anything beautiful lying dead on a table." Narvaez thinks to himself. Finally getting a word in amongst the great wailing from the sky. It's a shit friday night and the man's ego is bruised.</p>
     </section>
