wrapped up plot for fullythere

--- a/WildRedRose2023.html
+++ b/WildRedRose2023.html
@@ -215,7 +215,7 @@ I look down at my ankle. It&#39;s weird talking to an invisible face all the way
 [[I will boil some tea I guess.-&gt;BoilTea]] &lt;!-- This shows indepdence to Lau and self care.--&gt;
 
 [[I ask for a new coffee machine-&gt;AskCoffeeMachine]] &lt;!-- this shows a bit dependency but Lau wont stay for very long --&gt;
-&lt;&lt;set $broke_coffee to true&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="GroveTileSplit" tags="Unfinished" position="1550,625" size="100,100">&quot;Well today I&#39;m coming over because I care about you alright. I&#39;m going to bring you food and drink, if you&#39;re tired. Have you eaten already?&quot;
+&lt;&lt;set $broke_coffee to true&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="GroveTileSplit" tags="Unfinished" position="1550,650" size="100,100">&quot;Well today I&#39;m coming over because I care about you alright. I&#39;m going to bring you food and drink, if you&#39;re tired. Have you eaten already?&quot;
 
 &quot;No, I haven&#39;t. Slept in a bit late.&quot;
 
@@ -335,13 +335,13 @@ After all, Lau isn&#39;t exactly as fatherly as he thinks.
 
 &quot;It...resolves...It was reccommended by a Japanese scientist. It flushes the stomach and your throat.&quot;
 
-I laugh but I guess he has [[a point.-&gt;kitchen]]</tw-passagedata><tw-passagedata pid="38" name="anywayspot" tags="Complete Unfinished" position="350,1025" size="100,100">Whether I eat or not&lt;&lt;if $coffeemac_delievery is true&gt;&gt;I leave the broken coffee machine on the counter. It continues blinking and I try to count each blink, but my vision begins to blur.&lt;&lt;/if&gt;&gt;
+I laugh but I guess he has [[a point.-&gt;kitchen]]</tw-passagedata><tw-passagedata pid="38" name="anywayspot" tags="Complete" position="350,1000" size="100,100">Whether I eat or not, I do not have anything warm to drink and light me up. I
 
-I still need a better cleanse, food and drink is last. To wash away the wild days of before and after. I can&#39;t even stop to think over and run through the pages of everything that has happened so far.
+I still need a better cleanse to wash away the wild days of before and after. I can&#39;t even stop to think over and run through the pages of everything that has happened so far.
 
-The moment I had gained consciousness and saw Lau, I knew that the days of my boyhood would come pouring in, like an unwanted liquid into my ears and fill me. 
+The moment I had gained consciousness and saw Lau in the court room, I knew that the days of my boyhood would come pouring in, like an unwanted liquid into my ears and fill me. 
 
-I pour the water in the kitchen sink and pray for rain.
+I pour the soapy water in the kitchen sink and pray for rain.
 
 So [[I should clean-&gt;kitchen]] simply to impress this fatherhood figure who won&#39;t even lay eyes on me anyway.</tw-passagedata><tw-passagedata pid="39" name="bathroom" tags="Complete" position="2080,474" size="100,100">When you walk in here, usually you would hear a drop of water hitting the linoleum of the tub. The slight crickling of the pink, plastic &lt;div class&quot;tooltip&quot;&gt;shower curtain&lt;span class=&quot;tooltiptext&quot;&gt;It has this cartoon character from some unknown franchise. A little dog dressed as a baseball player. He has an emperor&#39;s mustache&lt;/span&gt;&lt;/div&gt; as the force of the door opening produces the wind to do so.
 
@@ -430,7 +430,7 @@ The regretful question of why did Wei had to steal an industrial ass size wok al
 
 Lau has not said a single thing. He has gone away for me to nourish quietly. 
 
-[[Hopefully.-&gt;anywayspot]]</tw-passagedata><tw-passagedata pid="57" name="lighter" tags="Complete" position="2025,125" size="100,100">I walk up to the sofa. First thing I see is the piston of the lighter jutting out of the crevice of the sofa. I guess the police really didn&#39;t clean place out that well. I mutter under my breathe as if Wei is still here to listen to my disappointment. I got a  fork in my asshole, last time he did left something in the crevice of the love seat.
+[[Hopefully.-&gt;anywayspot]]&lt;&lt;set $fed to true&gt;&gt;&lt;&lt;set $stable to 2&gt;&gt; (how does variables work again in twine?)</tw-passagedata><tw-passagedata pid="57" name="lighter" tags="Complete" position="2025,125" size="100,100">I walk up to the sofa. First thing I see is the piston of the lighter jutting out of the crevice of the sofa. I guess the police really didn&#39;t clean place out that well. I mutter under my breathe as if Wei is still here to listen to my disappointment. I got a  fork in my asshole, last time he did left something in the crevice of the love seat.
 
 I don&#39;t need an arson charge on me now either. I pull out the lighter the handle is a bright red, but the pistol is black, blending in with the black vinyl, looking like the love seat grew a limb that stood erect.
 
@@ -512,7 +512,7 @@ I put the oven mit back on the counter. It&#39;s stained with red bean sauce fro
 
 It may not even be safe to keep this here anymore. I put it in sock so I know it&#39;s [[cold feel-&gt;medicinecabinet]] is there always. &lt;&lt;set $wei_key to true&gt;&gt;</tw-passagedata><tw-passagedata pid="70" name="wok" tags="Complete" position="2375,900" size="100,100">With the electricity out, I cannot use the oven unless I have my lighter. So this wok sits here cold. Seasoning and flame has made it rough and blackened. The hand of its original owner will no longer warm it.&lt;&lt;if $orderout is true&gt;&gt;But Lau is ordering me food, so I don&#39;t need to waste any energy.&lt;&lt;else&gt;&gt;I&#39;ve eaten and the wok is warm. The oil still has bubbles in it.&lt;&lt;/if&gt;&gt;
 
-I should [[bury it-&gt;kitchen]] with him.</tw-passagedata><tw-passagedata pid="71" name="TigerFlash" tags="Unfinished Ignore" position="350,2100" size="100,100">He even started to change.</tw-passagedata><tw-passagedata pid="72" name="FedSelf" tags="" position="2400,1300" size="100,100"></tw-passagedata><tw-passagedata pid="73" name="YanisHelp" tags="Unfinished" position="2575,1100" size="100,100"></tw-passagedata><tw-passagedata pid="74" name="Untitled Passage" tags="" position="1550,850" size="100,100"></tw-passagedata><tw-passagedata pid="75" name="orderthrough" tags="Complete" position="250,875" size="100,100">I haven&#39;t had tofu in a long time and never liked the way Wei cooked it. It was always too spongy to me. Maybe it&#39;s supposed to be like that? He would also leave it plain, claiming that too much salt made him off kilter. Despite that honestly, salt wasn&#39;t the only thing that made him tilt.
+I should [[bury it-&gt;kitchen]] with him.</tw-passagedata><tw-passagedata pid="71" name="TigerFlash" tags="Unfinished Ignore" position="350,2100" size="100,100">He even started to change.</tw-passagedata><tw-passagedata pid="72" name="FedSelf" tags="" position="2400,1300" size="100,100"></tw-passagedata><tw-passagedata pid="73" name="YanisHelp" tags="Unfinished" position="2575,1100" size="100,100"></tw-passagedata><tw-passagedata pid="74" name="Untitled Passage" tags="" position="1125,975" size="100,100"></tw-passagedata><tw-passagedata pid="75" name="orderthrough" tags="Complete" position="250,875" size="100,100">I haven&#39;t had tofu in a long time and never liked the way Wei cooked it. It was always too spongy to me. Maybe it&#39;s supposed to be like that? He would also leave it plain, claiming that too much salt made him off kilter. Despite that honestly, salt wasn&#39;t the only thing that made him tilt.
 
 &quot;Do you want anything on the side of that? Some rice or soup?&quot;
 My stomach is so empty that I don&#39;t think soup is ideal. i imagine him writing a note of what to remember. As if he were a chef at the cashier and not a cop.
